manifests/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: auth
  labels:
    app.kubernetes.io/name: auth
spec:
  selector:
    app.kubernetes.io/name: auth
  ports:
    - name: http
      port: 3000
      targetPort: http
